--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <h1>Hello world</h1>
     <h1 style="color:blue">Good bye world</h1>
+    <img src="https://i.ytimg.com/vi/-QmZiKegxs8/maxresdefault.jpg">
   </body>
 </html>
